add publish api
